tests/ui/parser/misspelled-keywords/match.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `a`
  --> $DIR/match.rs:3:12
   |
LL |     matche a {}
   |            ^ expected one of 8 possible tokens

error: aborting due to 1 previous error

