tests/ui/parser/misspelled-keywords/match.rs
fn main() {
    let a = 10;
    matche a {}
    //~^ ERROR expected one of
}
